Fixed rspec test cases and api docs for admin devise
