# swagger/v1/swagger.yaml
@@ -5,13 +5,6 @@ info:
   version: v1
 paths:
   "/admins/sign_in":
-    get:
-      summary: Admin Sign in page
-      tags:
-      - Admin Authentication
-      responses:
-        '200':
-          description: sign in page
     post:
       summary: Admin Sign in
       tags:
@@ -28,39 +21,28 @@ paths:
             schema:
               type: object
               properties:
-                email:
-                  type: string
-                  example: admin@admin.com
-                password:
-                  type: string
-                  example: admin123
+                admin:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      example: admin@example.com
+                    password:
+                      type: string
+                      example: password
+                  required:
+                  - email
+                  - password
               required:
-              - email
-              - password
+              - admin
   "/admins/sign_out":
     delete:
       summary: Admin Sign out
       tags:
       - Admin Authentication
       responses:
-        '204':
-          description: successful sign out
-  "/admins/password/new":
-    get:
-      summary: New password reset page
-      tags:
-      - Admin Authentication
-      responses:
         '200':
-          description: password reset page
-  "/admins/password/edit":
-    get:
-      summary: Edit password page
-      tags:
-      - Admin Authentication
-      responses:
-        '200':
-          description: edit password page
+          description: Logged out successfully
   "/admins/password":
     post:
       summary: Send reset password instructions
@@ -78,11 +60,16 @@ paths:
             schema:
               type: object
               properties:
-                email:
-                  type: string
-                  example: admin@admin.com
+                admin:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      example: admin@example.com
+                  required:
+                  - email
               required:
-              - email
+              - admin
     patch:
       summary: Update password
       tags:
@@ -112,43 +99,7 @@ paths:
               - reset_password_token
               - password
               - password_confirmation
-    put:
-      summary: Update password
-      tags:
-      - Admin Authentication
-      parameters: []
-      responses:
-        '200':
-          description: password updated
-        '422':
-          description: unprocessable entity
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                reset_password_token:
-                  type: string
-                  example: reset-token
-                password:
-                  type: string
-                  example: newpassword
-                password_confirmation:
-                  type: string
-                  example: newpassword
-              required:
-              - reset_password_token
-              - password
-              - password_confirmation
-  "/admins/sign_up":
-    get:
-      summary: New registration page
-      tags:
-      - Admin Authentication
-      responses:
-        '200':
-          description: registration page
+  "/admins":
     post:
       summary: Create admin
       tags:
@@ -165,100 +116,24 @@ paths:
             schema:
               type: object
               properties:
-                email:
-                  type: string
-                  example: newadmin@admin.com
-                password:
-                  type: string
-                  example: password
-                password_confirmation:
-                  type: string
-                  example: password
+                admin:
+                  type: object
+                  properties:
+                    email:
+                      type: string
+                      example: newadmin@example.com
+                    password:
+                      type: string
+                      example: password
+                    password_confirmation:
+                      type: string
+                      example: password
+                  required:
+                  - email
+                  - password
+                  - password_confirmation
               required:
-              - email
-              - password
-              - password_confirmation
-  "/admins/cancel":
-    get:
-      summary: Cancel registration page
-      tags:
-      - Admin Authentication
-      responses:
-        '200':
-          description: cancel registration page
-  "/admins/edit":
-    get:
-      summary: Edit registration page
-      tags:
-      - Admin Authentication
-      responses:
-        '200':
-          description: edit registration page
-    patch:
-      summary: Update admin
-      tags:
-      - Admin Authentication
-      parameters: []
-      responses:
-        '200':
-          description: admin updated
-        '422':
-          description: unprocessable entity
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: updatedadmin@example.com
-                password:
-                  type: string
-                  example: newpassword
-                password_confirmation:
-                  type: string
-                  example: newpassword
-              required:
-              - email
-              - password
-              - password_confirmation
-    put:
-      summary: Update admin
-      tags:
-      - Admin Authentication
-      parameters: []
-      responses:
-        '200':
-          description: admin updated
-        '422':
-          description: unprocessable entity
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              properties:
-                email:
-                  type: string
-                  example: updatedadmin@example.com
-                password:
-                  type: string
-                  example: newpassword
-                password_confirmation:
-                  type: string
-                  example: newpassword
-              required:
-              - email
-              - password
-              - password_confirmation
-    delete:
-      summary: Delete admin
-      tags:
-      - Admin Authentication
-      responses:
-        '204':
-          description: admin deleted
+              - admin
   "/books":
     get:
       summary: Retrieves all books, optionally filtered by genre
